--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,4 +1,6 @@
 doctype html
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 html
   head
     title= title
