--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ doctype html
 
 html
   head
-    title= title
+    title= "IOT device status"
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
