--- a/views/index.jade
+++ b/views/index.jade
@@ -5,11 +5,41 @@ block content
     setInterval(() =>
       fetch('/data').then(res => res.json()).then(data =>{
         console.log(data)
+        globalData = data
         $('.data').html((data.html))
-        $('.deviceName').html('Live updating from: '+data.content.app_id)
+        $('.deviceName').html('Live updating from: '+ data.content.app_id)
       })
-    , 1000)
+    , 3000)
+
+    function getMapUrl () {
+      fetch('/data').then(res => res.json()).then(data =>{
+        const mapUrl = `https://maps.google.com/maps?q=${data.content.metadata.gateways[0].latitude},${data.content.metadata.gateways[0].longitude}&hl=es&z=14&output=embed`
+        console.log({mapUrl})
+        $('iframe').attr('src', mapUrl)
+      })
+    }
+    getMapUrl()
+    
+
   
   h1= "IOT device status"
   p(class='deviceName')= "Live updating from..." 
   p(class='data')= "fetching..."
+
+
+  div(style="float:right")
+    h2()= "Main gateway location:"
+    iframe(
+      style="float:right"
+      width="500"
+      height="300"
+      src=""
+    ) 
+  
+ br 
+ small
+   a (
+    href="https://maps.google.com/maps?q='+data.lat+','+data.lon+'&hl=es;z=14&amp;output=embed" 
+    style="color:#0000FF;text-align:left" 
+    target="_blank"
+    ) See map bigger
