--- a/views/index.jade
+++ b/views/index.jade
@@ -4,20 +4,29 @@ block content
   script.
     setInterval(() => {
       fetch('/data').then(res => res.json()).then(data =>{
-        console.log(data)
         globalData = data
         $('.data').html((data.html))
         $('.deviceName').html('Live updating from: '+ data.content.app_id)
         $('.lastUpdate').html('Last updated: ' + Date(data.content.metadata.time))
-        $('.status').html('Current status: : ')
       })
 
 
       // DATA POINTS
       fetch('/data-points').then(res => res.json()).then(data => {
-        console.log(data)
         const dates = data.dates
         const amplitude = data.amplitude
+
+        var avgValue = 0
+        var samples = 3
+        for(var i = amplitude.length - samples; i < amplitude.length; i++){
+          avgValue += amplitude[i]
+        }
+        avgValue /= samples;
+        if(avgValue > 100) {
+          
+        }
+
+        $('.status').html('Current status: ' + (avgValue > 100 ? 'ON' : 'OFF'))
 
         new Chart(document.getElementById("myChart"), {
           type: 'line',
