--- a/views/index.jade
+++ b/views/index.jade
@@ -62,6 +62,7 @@ block content
         $('.status').html('Current status: INTERNAL CONNECTION ERROR')
       })   
     }
+    update()
 
     var socket = io('http://localhost:4000');
     socket.on('connect', function(){
