--- a/views/index.jade
+++ b/views/index.jade
@@ -64,7 +64,8 @@ block content
     }
     update()
 
-    var socket = io('http://localhost:4000');
+    var socket = io(window.location.href === 'http://localhost:3000/' ? 'http://localhost:4000/' : 'https://' + window.location.host + ':4000');
+
     socket.on('connect', function(){
       console.log('connect')
     });
