--- a/views/index.jade
+++ b/views/index.jade
@@ -64,7 +64,8 @@ block content
     }
     update()
 
-    var socket = io(window.location.href === 'http://localhost:3000/' ? 'http://localhost:4000/' : 'http://' + window.location.host + ':4000');
+    var socket = io(window.location.href === 'http://localhost:3000/' ? 'http://localhost:4000/' : 'ws://' + window.location.host + ':4000');
+    var socket = io('ws://dry-garden-18914.herokuapp.com:4000');
 
     socket.on('connect', function(){
       console.log('connect')
