Hardcode url test

--- a/views/index.jade
+++ b/views/index.jade
@@ -64,6 +64,7 @@ block content
     update()
 
     var socket = io(window.location.href === 'http://localhost:3000/' ? 'http://localhost:3000/' : 'ws://' + window.location.host);
+    var socket = io("ws://dry-garden-18914.herokuapp.com");
 
     socket.on('connect', function(){
       console.log('connect')
